# ChatGPT4_GUI

./: .env  .gitignore  README.md  go.mod  hpge.py  main.go  main.py  pyproject.toml  test.py  wails.json
chatgpt4_gui/: Question.py  Setting.py  Talking.py  View.py  __init__.py  questionComponent.py  viewComponent.py
comp/: hoge.go
frontend/: index.html  package-lock.json
