[tool.poetry]
name = "chatgpt4-gui"
version = "0.1.0"
description = ""
authors = ["kajikaji0725"]
readme = "README.md"
packages = [{include = "chatgpt4_gui"}]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
flet = "^0.8.4"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
